# loupedeck

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pytest.ini
pyloupe/: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  api.py  color.py  constants.py  device.py  discovery.py  eventemitter.py  exceptions.py  logger.py  mypy.ini  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_install.py  util.py
pyloupe/.github/workflows/: python-tests.yml
pyloupe/connections/: __init__.py  serial.py  ws.py
pyloupe/docs/: button_mapping.md  tasks.md
pyloupe/examples/: README.md  api_example.py  button_config.yaml  razer_stream_controller_x_test.py  simple_example.py  slide_puzzle.py  yaml_config_example.py  yaml_config_test.py
pyloupe/tests/: mocks.py  test_color.py  test_device.py  test_integration.py  test_mock_device.py  test_parser.py  test_util.py
