[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloupe"
dynamic = ["version"]
description = "A Python library for controlling Loupedeck devices"
readme = "README.md"
authors = [{name = "Loupedeck Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["loupedeck", "stream controller", "hardware", "api"]
requires-python = ">=3.7"
dependencies = [
    "websockets>=10.0",
    "pyserial>=3.5",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "flake8>=6.0.0",
    "pytest>=8.0",
    "mypy>=1.0.0",
    "sphinx>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/foxxyz/pyloupe"
"Bug Tracker" = "https://github.com/foxxyz/pyloupe/issues"

[tool.setuptools.dynamic]
version = {attr = "__version__"}
